--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "name": "react-game-of-life",
   "version": "0.1.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build"
+  },
+  "dependencies": {
+    "next": "^10.0.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
   "license": "UNLICENSED"
 }
