--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build",
+    "format": "prettier --write 'src/**/*.js'"
   },
   "dependencies": {
     "next": "^10.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   },
   "license": "UNLICENSED"
 }
